# SquashVec

./: .gitignore  CLAUDE.md  README.md  agent.py  benchmark.py  cli.py  pyproject.toml
.openwork/: tasks.json
babel/: __init__.py  analysis.py  codec.py  codec_freq.py  exceptions.py  generator.py
babel_compression/: benchmark.py
babel_compression/babel/: __init__.py  charset_freq.py  codec.py  packing.py
babel_compression/tests/: test_roundtrip.py
ded/: README.md  STATUS.md
ded/articles/: 01-care-economy-ubi.md  02-american-sovereign-fund.md  03-ded-overview.md  04-economic-citizenship.md  05-supply-chain-risk.md  06-workforce-labor.md  07-system-map.md  08-food-resilience.md  09-space-mining.md  10-ai-unemployment.md  README.md
ded/assets/: README.md  critical-infrastructure.md  financial-infrastructure.md  human-capital.md  industrial-capacity.md  physical-resources.md  research-institutions.md
ded/economics/: assumptions-log.md  automation-labor-projection.md  benefits-summary.md  fiscal-integration.md  funding-options-catalog.md  historical-baseline.md  historical-instruments.md  implementation-timeline.md  ip-licensing-as-trade-tool.md  jobs-kpi-lifetime-model.md  supply-chain-concentration-risk.md  value-discovery.md
ded/feasibility/: 01-ded-charter.md  02-american-sovereign-fund.md  03-negative-income-tax.md  06-space-mining.md  (+10 more)
docs/: ROADMAP.md  architecture.md  explainer.md
governance/: CLAUDE.md  README.md  add-tags.py  index.html
lifestyle-planner/: .gitignore  README.md
startrek/: README.md
tests/: test_codec.py  test_roundtrip.py
(+167 files in other folders)
