[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "babel-compression"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "hypothesis"]

[project.scripts]
babel = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
